fix(homepage): prevent category cards from overflowing container on desktop

--- a/src/modules/HomePage/HomePage.module.scss
+++ b/src/modules/HomePage/HomePage.module.scss
@@ -96,9 +96,7 @@
     position: relative;
 
     @include on-desktop {
-      aspect-ratio: auto;
-      width: 368px;
-      height: 368px;
+      aspect-ratio: 1 / 1;
     }
 
     &--phones {
